centjes-gen/test_resources/balance/error/BE_OFF_BALANCE-two.cent
currency USD 0.01

account assets
account income

2023-11-24
  * assets +1 USD

2023-11-24
  * income -1 USD
